<?xml version="1.0"?>
<package>
  <name>psm_coop</name>
  <version>1.5.0</version>
  <description>The dVrk coop control package</description>

  <maintainer email="ragondokaryono@wpi.edu">Radian Azhar</maintainer>
  <license>CISST</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
